# py_pkg_template

./: README.md  setup.cfg
.github/workflows/: deploy.yml  test.yml
