[metadata]
name = # TODO: Input package name
description = # TODO: Input package description
long_description = file: README.md
long_description_content_type = text/markdown
author = AUTHORNAME
url = # TODO: Input project url
platforms = any
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
project_urls =
    Bug Tracker = # TODO: Input issue url
    Source Code = # TODO: Input github url

[bdist_wheel]
universal = 1

# TODO: Input requirements
[options]
# install_requires =
#     click
#     pandas

# python_requires = >=3.6

# TODO: Fill in the blanks to satisfy versioneer requirements
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
#VCS = git
#style = pep440
#versionfile_source =
#versionfile_build =
#tag_prefix =
#parentdir_prefix =

